# WiimoteWindowsMouse

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  config.nccf  main.c  main.h
lib/: CMakeLists.txt  ir.c  wiiuse.lib
src/: CMakeLists.txt  main.c  main.h  nccf.c  nccf.h
